Extract mail history writing in dedicated object